--- a/services.html
+++ b/services.html
@@ -19,7 +19,7 @@
             <a href="index.html">Главная</a>
             <a href="services.html" class="active">Услуги</a>
             <a href="about.html">О нас</a>
-            <a href="motivation.html">Мотивация</a>
+            <a href="contact.html">Контакты</a>
         </div>
         <div class="auth-buttons">
             <button id="loginBtn" class="btn btn-outline">Вход</button>
