--- a/about.html
+++ b/about.html
@@ -37,27 +37,27 @@
             <div class="about-content">
                 <div class="about-section">
                     <h2>Наша История</h2>
-                    <p>Think-Off Bank был основан с целью предоставления инновационных банковских решений. За более чем 25 лет работы мы стали одним из ведущих финансовых учреждений, обслуживающих миллионы клиентов по всему миру.</p>
+                    <p>Think-Off Bank был основан как студенческий проект с амбициозной целью — переосмыслить банковскую систему. Мы выросли из предпринимательского опыта, а не из совещательных залов. Сегодня Think-Off — это цифровой банк нового поколения, созданный молодыми — для тех, кто хочет большего.</p>
                 </div>
 
                 <div class="about-section">
                     <h2>Наша Миссия</h2>
-                    <p>Мы стремимся сделать банковские услуги доступными, удобными и безопасными для каждого. Наша цель - помочь клиентам достичь их финансовых целей через инновационные решения и персонализированный подход.</p>
+                    <p>Мы создаём финансовые инструменты, которые делают свободу реальной. Убираем лишнее, ускоряем важное и уважаем время каждого клиента. Наша миссия — усилить каждого, кто мыслит дерзко и действует быстро.</p>
                 </div>
 
                 <div class="about-section">
                     <h2>Наши Ценности</h2>
                     <ul>
-                        <li><i class="fas fa-check"></i> Инновации и технологический прогресс</li>
-                        <li><i class="fas fa-check"></i> Клиентоориентированность</li>
-                        <li><i class="fas fa-check"></i> Надежность и безопасность</li>
-                        <li><i class="fas fa-check"></i> Социальная ответственность</li>
+                        <li><i class="fas fa-check"></i> Скорость - все за минуты, не дни.</li>
+                        <li><i class="fas fa-check"></i> Прозрачность - никакой мути, все по честному</li>
+                        <li><i class="fas fa-check"></i> Свобода - ты делаешь деньги, а не они тебя.</li>
+                        <li><i class="fas fa-check"></i> Рост - мы растем, если растешь ты.</li>
                     </ul>
                 </div>
 
                 <div class="about-section">
                     <h2>Наша Команда</h2>
-                    <p>Мы гордимся нашей командой профессионалов, которые ежедневно работают над тем, чтобы сделать банковские услуги лучше и доступнее для наших клиентов. Наши сотрудники - это эксперты в своих областях, готовые помочь вам в любом вопросе.</p>
+                    <p>В команде Think-Off — молодые предприниматели, айтишники и амбициозные управленцы, прошедшие путь от бизнеса на земле до цифровых решений. Мы говорим на одном языке с нашими клиентами, потому что сами живём в таком же ритме. Наша сила — в скорости, креативе и абсолютной нацеленности на результат.</p>
                 </div>
             </div>
         </section>
