--- a/services.html
+++ b/services.html
@@ -40,43 +40,113 @@
                     <h3>Цифровой Банкинг</h3>
                     <p>Управляйте своими финансами онлайн 24/7</p>
                     <ul>
-                        <li>Мобильное приложение</li>
-                        <li>Интернет-банкинг</li>
-                        <li>Быстрые переводы</li>
+                        <li>Мобильное приложение с биометрической защитой</li>
+                        <li>Интернет-банкинг с расширенной аналитикой</li>
+                        <li>Быстрые переводы по номеру телефона</li>
+                        <li>QR-код оплата в магазинах</li>
+                        <li>Уведомления о транзакциях в реальном времени</li>
+                        <li>Блокировка карты в один клик</li>
                     </ul>
+                    <a href="digital-banking.html" class="btn btn-outline">Подробнее</a>
                 </div>
 
                 <div class="service-card">
                     <i class="fas fa-money-bill-wave"></i>
                     <h3>Кредиты</h3>
-                    <p>Гибкие условия кредитования</p>
+                    <p>Гибкие условия кредитования для любых целей</p>
                     <ul>
-                        <li>Ипотека</li>
-                        <li>Потребительские кредиты</li>
-                        <li>Автокредиты</li>
+                        <li>Ипотека от 7.5% годовых</li>
+                        <li>Потребительские кредиты до 5 млн</li>
+                        <li>Автокредиты с минимальным пакетом документов</li>
+                        <li>Кредиты для бизнеса с индивидуальными условиями</li>
+                        <li>Образовательные кредиты для студентов</li>
                     </ul>
+                    <a href="loans.html" class="btn btn-outline">Подробнее</a>
                 </div>
 
                 <div class="service-card">
                     <i class="fas fa-credit-card"></i>
                     <h3>Кредитные Карты</h3>
-                    <p>Премиальные карты с бонусами</p>
+                    <p>Премиальные карты с расширенными бонусами</p>
                     <ul>
-                        <li>Кэшбэк до 5%</li>
-                        <li>Бесплатное обслуживание</li>
-                        <li>Страхование покупок</li>
+                        <li>Кэшбэк до 5% на все покупки</li>
+                        <li>Бесплатное обслуживание при тратах от 20,000 ₽</li>
+                        <li>Страхование покупок и путешествий</li>
+                        <li>Доступ в бизнес-залы аэропортов</li>
+                        <li>Персональный менеджер</li>
+                        <li>Бесплатная доставка карты</li>
                     </ul>
+                    <a href="credit-cards.html" class="btn btn-outline">Подробнее</a>
                 </div>
 
                 <div class="service-card">
                     <i class="fas fa-chart-line"></i>
                     <h3>Инвестиции</h3>
-                    <p>Умные инвестиционные решения</p>
+                    <p>Умные инвестиционные решения для роста капитала</p>
                     <ul>
-                        <li>Биржевые инструменты</li>
-                        <li>Доверительное управление</li>
-                        <li>Инвестиционные фонды</li>
+                        <li>Биржевые инструменты с аналитикой</li>
+                        <li>Доверительное управление от 100,000 ₽</li>
+                        <li>Инвестиционные фонды с диверсификацией</li>
+                        <li>Персональные инвестиционные стратегии</li>
+                        <li>Круглосуточная поддержка инвесторов</li>
                     </ul>
+                    <a href="#" class="btn btn-outline">Подробнее</a>
+                </div>
+
+                <div class="service-card">
+                    <i class="fas fa-piggy-bank"></i>
+                    <h3>Вклады и Счета</h3>
+                    <p>Надежные способы сохранения и приумножения средств</p>
+                    <ul>
+                        <li>Вклады с процентной ставкой до 8%</li>
+                        <li>Накопительные счета с капитализацией</li>
+                        <li>Мультивалютные счета</li>
+                        <li>Детские накопительные счета</li>
+                        <li>Пенсионные программы</li>
+                        <li>Страхование вкладов</li>
+                    </ul>
+                    <a href="#" class="btn btn-outline">Подробнее</a>
+                </div>
+
+                <div class="service-card">
+                    <i class="fas fa-shield-alt"></i>
+                    <h3>Страхование</h3>
+                    <p>Комплексная защита ваших активов и близких</p>
+                    <ul>
+                        <li>Страхование жизни и здоровья</li>
+                        <li>Страхование имущества</li>
+                        <li>Автострахование КАСКО и ОСАГО</li>
+                        <li>Страхование путешествий</li>
+                        <li>Страхование бизнеса</li>
+                        <li>Программы лояльности для страхователей</li>
+                    </ul>
+                    <a href="#" class="btn btn-outline">Подробнее</a>
+                </div>
+            </div>
+
+            <div class="services-features">
+                <h2>Почему выбирают нас</h2>
+                <div class="features-grid">
+                    <div class="feature-item">
+                        <i class="fas fa-clock"></i>
+                        <h3>Круглосуточная поддержка</h3>
+                        <p>Наши специалисты всегда на связи и готовы помочь вам в любое время</p>
+                    </div>
+                    <div class="feature-item">
+                        <i class="fas fa-lock"></i>
+                        <h3>Безопасность</h3>
+                        <p>Современные системы защиты и мониторинга всех операций</p>
+                    </div>
+                    <div class="feature-item">
+                        <i class="fas fa-percentage"></i>
+                        <h3>Выгодные условия</h3>
+                        <p>Конкурентные ставки и минимальные комиссии</p>
+                    </div>
+                    <div class="feature-item">
+                        <i class="fas fa-mobile-alt"></i>
+                        <h3>Удобство</h3>
+                        <p>Все услуги доступны онлайн через мобильное приложение</p>
+                    </div>
                 </div>
             </div>
         </section>
