--- a/contact.html
+++ b/contact.html
@@ -40,17 +40,23 @@
                         <i class="fas fa-user-tie"></i>
                         <h2>Руководство</h2>
                         <div class="contact-details">
-                            <p><strong>Должность:</strong> Генеральный директор</p>
-                            <p><strong>Email:</strong> ceo@think-off-bank.ru</p>
+                            <p><strong>Генеральный директор:</strong> Алмаз ТимЛид в 18 лет</p>
+                            <p><strong>Email:</strong> teamlead@gmail.com</p>
+                            <p><strong>Телефон:</strong> +966 557 555 324</p>
+                            <p><strong>Приемные часы:</strong> Пн-Пт: 10:00 - 18:00</p>
                         </div>
                     </div>
 
                     <div class="contact-card">
                         <i class="fas fa-phone"></i>
-                        <h2>Телефон</h2>
+                        <h2>Телефонная поддержка</h2>
                         <div class="contact-details">
-                            <p><strong>Клиентская поддержка:</strong> 8-800-123-45-67</p>
-                            <p><strong>Время работы:</strong> Пн-Пт: 9:00 - 18:00</p>
+                            <p><strong>Клиентская поддержка:</strong> +996 500 13 03 06</p>
+                            <p><strong>Время работы:</strong> Круглосуточно</p>
+                            <p><strong>Техническая поддержка:</strong> +996 557 555 234 </p>
+                            <p><strong>Время работы:</strong> Пн-Вс: 8:00 - 22:00</p>
+                            <p><strong>Отдел безопасности:</strong> 8-800-999-88-77</p>
+                            <p><strong>Время работы:</strong> Круглосуточно</p>
                         </div>
                     </div>
 
@@ -58,10 +64,75 @@
                         <i class="fas fa-envelope"></i>
                         <h2>Email</h2>
                         <div class="contact-details">
-                            <p><strong>Общие вопросы:</strong> info@think-off-bank.ru</p>
-                            <p><strong>Поддержка:</strong> support@think-off-bank.ru</p>
+                            <p><strong>Общие вопросы:</strong> teamlead@think-off-bank.ru</p>
+                            <p><strong>Поддержка клиентов:</strong> support@think-off-bank.ru</p>
+                            <p><strong>Пресс-служба:</strong> Almaz@think-off-bank.ru</p>
+                            <p><strong>Карьера:</strong> Money@think-off-bank.ru</p>
+                            <p><strong>Безопасность:</strong>Safey@think-off-bank.ru</p>
                         </div>
                     </div>
+
+                    <div class="contact-card">
+                        <i class="fas fa-map-marker-alt"></i>
+                        <h2>Головной офис</h2>
+                        <div class="contact-details">
+                            <p><strong>Адрес:</strong> г. Бишкек, ул. Анкара, д. 1/8</p>
+                            <p><strong>Индекс:</strong> 720000</p>
+                            <p><strong>Время работы:</strong> Пн-Пт: 9:00 - 18:00</p>
+                            <p><strong>Как добраться:</strong> 10 минут от ТехноПарк</p>
+                        </div>
+                    </div>
+
+                    <div class="contact-card">
+                        <i class="fas fa-comments"></i>
+                        <h2>Социальные сети</h2>
+                        <div class="contact-details">
+                            <p><strong>Telegram:</strong> @Daysfckf</p>
+                            <p><strong>VK:</strong> vk.com/thinkoffbank</p>
+                            <p><strong>Facebook:</strong> facebook.com/thinkoffbank</p>
+                            <p><strong>Instagram:</strong> @Daysfckf</p>
+                        </div>
+                    </div>
+
+                    <div class="contact-card">
+                        <i class="fas fa-clock"></i>
+                        <h2>Режим работы</h2>
+                        <div class="contact-details">
+                            <p><strong>Отделения банка:</strong> Пн-Пт: 9:00 - 20:00, Сб-Вс: 10:00 - 18:00</p>
+                            <p><strong>Банкоматы:</strong> Круглосуточно</p>
+                            <p><strong>Интернет-банк:</strong> Круглосуточно</p>
+                            <p><strong>Мобильное приложение:</strong> Круглосуточно</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="contact-form-section">
+                    <h2>Напишите нам</h2>
+                    <form class="contact-form">
+                        <div class="form-group">
+                            <label for="name">Ваше имя</label>
+                            <input type="text" id="name" required>
+                        </div>
+                        <div class="form-group">
+                            <label for="contact-email">Email</label>
+                            <input type="email" id="contact-email" required>
+                        </div>
+                        <div class="form-group">
+                            <label for="subject">Тема</label>
+                            <select id="subject" required>
+                                <option value="">Выберите тему</option>
+                                <option value="general">Общий вопрос</option>
+                                <option value="support">Техническая поддержка</option>
+                                <option value="complaint">Жалоба</option>
+                                <option value="suggestion">Предложение</option>
+                            </select>
+                        </div>
+                        <div class="form-group">
+                            <label for="message">Сообщение</label>
+                            <textarea id="message" rows="5" required></textarea>
+                        </div>
+                        <button type="submit" class="btn btn-primary">Отправить</button>
+                    </form>
                 </div>
             </div>
         </section>
