--- a/index.html
+++ b/index.html
@@ -3,11 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Think-Off Bank - Ваш цифровой банковский партнер</title>
+    <title>Think-Off Bank - Инновационный Банкинг</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
 <body>
+    <div class="animated-bg"></div>
+    
     <!-- Navigation -->
     <nav class="navbar">
         <div class="logo">
@@ -16,10 +18,10 @@
             </a>
         </div>
         <div class="nav-links">
-            <a href="index.html" class="active">Главная</a>
-            <a href="services.html">Услуги</a>
-            <a href="about.html">О нас</a>
-            <a href="contact.html">Контакты</a>
+            <a href="#home" class="active">Главная</a>
+            <a href="#services">Услуги</a>
+            <a href="#about">О нас</a>
+            <a href="#contact">Контакты</a>
         </div>
         <div class="auth-buttons">
             <button id="loginBtn" class="btn btn-outline">Вход</button>
@@ -29,10 +31,36 @@
 
     <!-- Hero Section -->
     <section id="home" class="hero">
+        <div class="hero-particles"></div>
         <div class="hero-content">
-            <h1>Добро пожаловать в Think-Off Bank</h1>
-            <p>Ваш надежный партнер в цифровых банковских решениях</p>
-            <button class="btn btn-primary">Начать</button>
+            <h1 class="floating">Think-Off Bank</h1>
+            <p class="pulsing">Инновационный банкинг будущего</p>
+            <div class="hero-features">
+                <div class="feature">
+                    <i class="fas fa-shield-alt"></i>
+                    <span>Безопасность</span>
+                </div>
+                <div class="feature">
+                    <i class="fas fa-bolt"></i>
+                    <span>Скорость</span>
+                </div>
+                <div class="feature">
+                    <i class="fas fa-percentage"></i>
+                    <span>Выгода</span>
+                </div>
+            </div>
+            <div class="hero-buttons">
+                <a href="#services" class="btn btn-primary">Начать</a>
+                <a href="#about" class="btn btn-outline">Узнать больше</a>
+            </div>
+            <div class="app-buttons">
+                <a href="https://apps.apple.com/app/think-off-bank" target="_blank" class="app-button">
+                    <img src="https://developer.apple.com/app-store/marketing/guidelines/images/badge-download-on-the-app-store.svg" alt="Download on App Store">
+                </a>
+                <a href="https://play.google.com/store/apps/details?id=com.thinkoffbank" target="_blank" class="app-button">
+                    <img src="https://play.google.com/intl/en_us/badges/static/images/badges/en_badge_web_generic.png" alt="Get it on Google Play">
+                </a>
+            </div>
         </div>
     </section>
 
@@ -41,20 +69,88 @@
         <h2>Наши Услуги</h2>
         <div class="services-grid">
             <div class="service-card">
-                <i class="fas fa-wallet"></i>
+                <i class="fas fa-mobile-alt"></i>
                 <h3>Цифровой Банкинг</h3>
-                <p>Управляйте своими счетами в любое время и в любом месте</p>
+                <p>Управляйте своими финансами в любое время и в любом месте с помощью нашего современного мобильного приложения.</p>
+                <ul>
+                    <li>Мгновенные переводы</li>
+                    <li>Оплата счетов онлайн</li>
+                    <li>Мониторинг расходов</li>
+                    <li>Инвестиционные инструменты</li>
+                    <li>Круглосуточная поддержка</li>
+                </ul>
+                <a href="digital-banking.html" class="btn">Подробнее</a>
             </div>
             <div class="service-card">
-                <i class="fas fa-money-bill-wave"></i>
+                <i class="fas fa-hand-holding-usd"></i>
                 <h3>Кредиты</h3>
-                <p>Конкурентные ставки для всех ваших потребностей</p>
+                <p>Гибкие кредитные решения для ваших целей с выгодными процентными ставками и быстрым одобрением.</p>
+                <ul>
+                    <li>Ипотечные кредиты</li>
+                    <li>Потребительские кредиты</li>
+                    <li>Автокредиты</li>
+                    <li>Рефинансирование</li>
+                    <li>Кредитные каникулы</li>
+                </ul>
+                <a href="loans.html" class="btn">Подробнее</a>
             </div>
             <div class="service-card">
                 <i class="fas fa-credit-card"></i>
                 <h3>Кредитные Карты</h3>
-                <p>Вознаграждения и преимущества за каждую покупку</p>
+                <p>Выберите карту, которая соответствует вашему стилю жизни, с эксклюзивными бонусами и привилегиями.</p>
+                <ul>
+                    <li>Кэшбэк до 5%</li>
+                    <li>Бесплатное обслуживание</li>
+                    <li>Страхование путешествий</li>
+                    <li>Привилегии в аэропортах</li>
+                    <li>Персональный менеджер</li>
+                </ul>
+                <a href="credit-cards.html" class="btn">Подробнее</a>
             </div>
+        </div>
+    </section>
+
+    <!-- Features Section -->
+    <section class="features">
+        <div class="features-grid">
+            <div class="feature-item">
+                <i class="fas fa-shield-alt"></i>
+                <h3>Безопасность</h3>
+                <p>Ваши средства под надежной защитой с использованием передовых технологий шифрования и многофакторной аутентификации.</p>
+            </div>
+            <div class="feature-item">
+                <i class="fas fa-bolt"></i>
+                <h3>Скорость</h3>
+                <p>Мгновенные операции и быстрый доступ к вашим финансам 24/7 через мобильное приложение или веб-интерфейс.</p>
+            </div>
+            <div class="feature-item">
+                <i class="fas fa-percentage"></i>
+                <h3>Выгода</h3>
+                <p>Выгодные тарифы, специальные предложения и персональные условия для наших клиентов.</p>
+            </div>
+        </div>
+    </section>
+
+    <!-- Contact Form Section -->
+    <section id="contact" class="contact-form-section">
+        <div class="contact-form">
+            <h2>Свяжитесь с нами</h2>
+            <p class="contact-description">Оставьте заявку, и наш специалист свяжется с вами в ближайшее время</p>
+            <form id="contactForm">
+                <div class="form-group">
+                    <label for="name">Имя</label>
+                    <input type="text" id="name" name="name" required placeholder="Введите ваше имя">
+                </div>
+                <div class="form-group">
+                    <label for="email">Email</label>
+                    <input type="email" id="email" name="email" required placeholder="Введите ваш email">
+                </div>
+                <div class="form-group">
+                    <label for="message">Сообщение</label>
+                    <textarea id="message" name="message" required placeholder="Введите ваше сообщение"></textarea>
+                </div>
+                <button type="submit" class="btn btn-primary">Отправить</button>
+            </form>
         </div>
     </section>
 
@@ -100,12 +196,7 @@
         </div>
     </div>
 
-    <!-- Firebase SDK -->
-    <script src="https://www.gstatic.com/firebasejs/9.x.x/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/9.x.x/firebase-auth.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/9.x.x/firebase-firestore.js"></script>
-    
-    <!-- Custom Scripts -->
+    <!-- Scripts -->
     <script type="module" src="firebase-config.js"></script>
     <script type="module" src="script.js"></script>
 </body>
